# SLAM-in-the-Dark

./: README.md
darkslam/: README.md  pyproject.toml  requirements.txt
darkslam/src/darkslam/data/: __init__.py  dataset.py
darkslam/src/darkslam/engine/: __init__.py  infer.py  train.py
darkslam/src/darkslam/models/: pose_resnet.py  resnet_encoder.py
darkslam/src/darkslam/scdepth/: __init__.py  custom_transforms.py  inverse_warp.py
darkslam/src/darkslam/slam/: loop_closure_detection.py
src/darkslam/: __init__.py  cli.py  config.py
src/darkslam/data/: dataset.py
src/darkslam/engine/: infer.py  train.py
src/darkslam/models/: __init__.py  disp_resnet.py  pose_resnet.py  resnet_encoder.py
src/darkslam/scdepth/: custom_transforms.py  inverse_warp.py  loss_functions.py  train.py  utils.py
src/darkslam/scdepth/datasets/: __init__.py  pair_folders.py  sequence_folders.py  validation_folders.py
src/darkslam/slam/: __init__.py  feature_encoder.py  loop_closure_detection.py  pose_graph_optimization.py
src/darkslam/utils/: __init__.py  logging.py
